make header style and fonts

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,7 @@
 en:
   layouts:
     header:
-      company_name: "Gallery"
+      company_name: "LOGO"
       categories: "Categories"
       all_categories: "All categories"
       images: "Images"
