make button New category on Categories page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -42,6 +42,8 @@ en:
       logout: "Log out"
       profile: "Profile"
   categories:
+    index:
+      new_category: "Create"
     show:
       upload_new_image: "Upload"
   subscriptions:
