fixed flash and other notifications front

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,8 @@ en:
       new_category: "Create"
     show:
       upload_new_image: "Upload"
+    create:
+      category_created: "Category was successfully created"
   subscriptions:
     subscribe:
       subscribe: "Subscribe"
@@ -60,4 +62,6 @@ en:
       likes: "Likes"
     unlike:
       likes: "Likes"
-
+  images:
+    create:
+      image_created: "Image was successfully created"
