fixed header front in ru localization

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,8 +6,8 @@ ru:
       all_categories: "Все категории"
       images: "Картинки"
       comments: "Комментарии"
-      sign_up: "Зарегистрироваться"
-      login: "Войти"
+      sign_up: "Регистрация"
+      login: "Вход"
       language: "Язык"
       logout: "Выйти"
       profile: "Аккаунт"
