refactor code and fix i18n issue

--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -26,8 +26,8 @@ ru:
       password_change:
         subject: "Пароль изменен"
     omniauth_callbacks:
-      failure: "Не могу аутентифицировать вас из %{kind} по причине \"%{reason}\"."
-      success: "Успешно аутентифицировано из %{kind} учетной записи."
+      failure: "Не могу аутентифицировать вас."
+      success: "Успешно аутентифицировано из учетной записи."
     passwords:
       no_token: "Вы не можете получить доступ к текущей странице иначе как через полученное письмо изменения пароля. Если вы попали сюда через письмо изменения пароля, пожалуйста убедитесь, что вы использовали полную, предоставленную ссылку."
       send_instructions: "Вы получите email с инструкциями по изменению пароля в течении нескольких минут."
