refactor subscription form and remove redundant files

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -51,9 +51,8 @@ en:
     create:
       category_created: "Category was successfully created"
   subscriptions:
-    subscribe:
-      subscribe: "Subscribe"
-    unsubscribe:
+    subscription_form:
+      subscribe: 'Subscribe'
       unsubscribe: "Unsubscribe"
   likes:
     like_category_img:
